top sale section added

--- a/mobileStore/sass/style.scss
+++ b/mobileStore/sass/style.scss
@@ -1,7 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Baloo+Tammudu+2&family=Raleway&family=Rubik&display=swap');
 
-/* sass template */
+/* sass templates */
 @import'./include/variables.scss';
 @import'./include/global.scss';
 @import'./include/typography.scss';
-@import'./include/color.scss'
+@import'./include/color.scss';
+@import'./include/top-sale.scss'
+
+
