Product and Cart page added.

--- a/mobileStore/sass/style.scss
+++ b/mobileStore/sass/style.scss
@@ -5,7 +5,7 @@
 @import'./include/global.scss';
 @import'./include/typography.scss';
 @import'./include/color.scss';
-@import'./include/top-sale.scss';
-@import'./include/special-price.scss';
+@import'./include/topSale.scss';
+@import'./include/specialPrice.scss';
 
 
