--- a/mobileStore/style.css
+++ b/mobileStore/style.css
@@ -11,23 +11,27 @@ button, button:focus {
   font-family: "Baloo Tammudu 2", normal;
 }
 
-.font-size12 {
+.font-size-12 {
   font-size: 12px;
 }
 
-.font-size14 {
+.font-size-14 {
   font-size: 14px;
 }
 
-.font-size16 {
+.font-size-16 {
   font-size: 16px;
 }
 
-.font-size20 {
+.font-size-18 {
+  font-size: 18px;
+}
+
+.font-size-20 {
   font-size: 20px;
 }
 
-.font-size40 {
+.font-size-40 {
   font-size: 40px;
 }
 
